Fix white space at bottom of practice areas cards - add height: fit-content

--- a/src/assets/styles/style-core.css
+++ b/src/assets/styles/style-core.css
@@ -951,6 +951,7 @@ textarea.form_field {
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     flex-direction: column;
+    height: fit-content;
     overflow: hidden;
 }
 
